# bcregistry-sre

./: .gitignore  COMPLIANCE.yaml  README.md  codecov.yaml  index.yaml
.github/: CODEOWNERS.txt  kubeval.sh
.github/actions/add-git-tag/: action.yml
.github/actions/backend-deploy/: action.yml
.github/actions/backend-deploy-job/: action.yml
.github/actions/cloud-deploy/: action.yml
.github/scripts/: github-add-envrs.sh
.github/workflows/: api-cd.yaml  api-ci.yaml  backend-cd-ocp.yaml  backend-cd.yaml  backend-ci-coverage.yaml  backend-ci.yaml  backend-cronjob-cd-ocp.yaml  backend-job-cd.yaml  charts-ci.yaml  charts-release.yaml  cloud-run-job-cd.yaml  cloud-run-service-cd.yaml  codecov-ci.yaml  downpage-off.yaml  downpage-on.yaml  frontend-cd.yaml  frontend-ci-coverage.yaml  frontend-ci.yaml  notify-api-cd-gcp.yaml  notify-api-cd-ocp.yaml  notify-api-cd.yaml  notify-api-ci.codecov.yaml  notify-api-ci.yaml  notify-delivery-cd-ocp.yaml  notify-delivery-cd.yaml  notify-delivery-ci.yaml  oas-ci.yaml  restart-queue-services.yaml  restart-service-10.yaml  restart-services-hourly.yaml  restart-services.yaml  terraform-gcs.yaml  ui-cd-node20.yaml  ui-cd-ocp.yaml  ui-cd-pnpm-nested-pkg.yaml  ui-cd-pnpm.yaml  ui-cd-private-node20.yaml  ui-cd-private.yaml  ui-cd.yaml  vault-service-cd.yml
argocd/: installation.yaml
backup-iac/: README.md
bcros-cli/: Dockerfile
charts/: README.md
charts/bcregistry-api/: Chart.yaml  values.yaml
charts/bcregistry-cronjob/: Chart.yaml  values.yaml
charts/bcregistry-queue/: Chart.yaml  values.yaml
charts/bcregistry-ui/: Chart.yaml  values.yaml
cloud-functions/deployment-notification/: .gcloudignore  README.md  main.py  main_test.py
composite-actions/api-cd/: action.yaml
composite-actions/ui-cd/: action.yaml
disaster-recovery-plan/: README.md  Vanity-URL-recovery.md
downpage/: .firebaserc  Dockerfile  Makefile  README.md  firebase.json  index.html  nginx.conf
downpage/k8s/: README.md
gcp/: Dockerfile
gcp/cloud_deploy/: README.md  clouddeploy-targets.yaml
gcp/iam/: add_user.sh  application-roles.sh  application.sh  ba.sh  cd-cloudbuild.yaml  cd-clouddeploy.yaml  cd-cloudrun-role.sh  cd-cloudrun.yaml  cd.sh  create-developer-roles.sh  create-roles.sh  create-service-accounts.sh  create-service-accounts.txt  developer.sh  grant-access.sh  itops.sh  pubsub.sh  remove_user.sh  role-api.yaml  role-ba.yaml  role-cdcloudrun.yaml  role-developer-dev.yaml  role-developer.yaml  role-itops.yaml  role-job.yaml  role-queue.yaml  sre.sh
gcp/pam/: generate-entitlements.sh  generate-pam-infra.sh
gcp/project_setup/: gcp_cloudsql_instance.sh  gcp_infra.sh  gcp_permissions.sh
gcp/synthetic-monitor/: README.md
gcp/terraform/: .gitignore  .terraform.lock.hcl  environment_custom_roles.auto.tfvars  global_custom_roles.auto.tfvars  main.tf  project_account_bindings.auto.tfvars  tf-import-sa.sh  tf-import.sh  variables.tf  versions.tf
images/gcp-sre/: Dockerfile  build.sh
images/postgres-ci/: Dockerfile  build.sh
notify-api/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  gunicorn_config.py  pre-hook-update-db.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  wsgi.py
notify-api/.devcontainer/: devcontainer.json  docker-compose.yml
notify-api/devops/: vaults.dev  vaults.env  vaults.gcp.env  vaults.json  vaults.ocp.env
notify-api/devops/gcp/: cloudbuild-promote.yaml  cloudbuild.yaml  clouddeploy-targets.yaml  clouddeploy.yaml  skaffold.yaml
notify-api/devops/gcp/k8s/: job.dev.yaml  job.template.yaml
notify-api/devops/helm/: Readme.md  values-dev.yaml  values.dev.yaml  values.prod.yaml  values.test.yaml
notify-api/devops/k8s/: Readme.md  notify-db.yaml
notify-api/migrations/: env.py
notify-api/migrations/versions/: 0001_initial_tables.py  0008-6179cd10fa94_add_callback.py  0009-fc3eb17e9773_add_forwarded_status.py
notify-api/requirements/: dev.txt  prod.txt
notify-api/src/notify_api/: __init__.py  config.py  errorhandlers.py  errors.py  logging.conf  logging.yaml  metadata.py  version.py
notify-api/src/notify_api/models/: __init__.py  attachment.py  callback.py  content.py  db.py  email.py  notification.py  notification_history.py  safe_list.py
notify-api/src/notify_api/resources/: __init__.py  constants.py  version_endpoint.py
notify-api/src/notify_api/resources/meta/: __init__.py  meta.py
notify-api/src/notify_api/resources/ops/: __init__.py  ops.py
notify-api/src/notify_api/resources/v1/: __init__.py  meta.py  notify.py  ops.py
notify-api/src/notify_api/resources/v2/: __init__.py  callback.py  email_validation.py  meta.py  notify.py  ops.py  resend.py  safe_list.py
notify-api/src/notify_api/services/: __init__.py  notify_service.py
notify-api/src/notify_api/services/providers/: __init__.py  email_smtp.py  gc_notify.py
notify-api/src/notify_api/utils/: base.py  datetime.py  enums.py  logging.py  run_version.py  tracing.py  util.py
notify-api/tests/: __init__.py  conftest.py
notify-api/tests/factories/: attachment.py  content.py  jwt.py  notification.py
notify-api/tests/unit/: test_error_handlers.py
notify-api/tests/unit/conf/: test_alembic.py  test_configuration.py  test_version.py
notify-api/tests/unit/models/: __init__.py  test_attachment.py  test_content.py  test_notification.py  test_safe_list.py
notify-api/tests/unit/resources/ops/: test_ops.py
notify-api/tests/unit/resources/v1/: test_meta.py  test_notify.py  test_ops.py
notify-api/tests/unit/resources/v2/: test_meta.py  test_notify.py  test_ops.py  test_safe_list.py
notify-api/tests/unit/services/: test_notify.py
notify-api/tests/unit/utils/: test_datetime.py  test_logging.py  test_util_cors.py
notify-delivery/: .dockerignore  .env.sample  Dockerfile  gunicorn_config.py  pyproject.toml  wsgi.py
notify-delivery/devops/: vaults.gcp.env  vaults.ocp.env
notify-delivery/tests/: __init__.py  conftest.py
support/: README.md
vault-service/: Dockerfile  Makefile  README.md
vault-service/devops/: versions.yaml
vault-service/k8s/: README.md
vault-service/scripts/: 1pass.sh
(+175 files in other folders)
